# ZhangGang

./: .gitignore  README.md  test_file  test_file.txt
KristinCode/: GenderPetTest.csv  correlation.cpp  correlation.h  dataset.cpp  dataset.h  main  main.cpp  test.txt
chisquare/: CMakeLists.txt
chisquare/src/: library.h
chisquare/src/include/: ChisquarePValueFinder.cpp  Readme.txt
chisquare/src/model/: correlation.h  dataset.h
driver/: CMakeLists.txt
driver/include/: CMakeLists.txt  ChisquarePValueFinder.h  library.cpp
driver/include/model/: dataset.h
driver/include/service/: correlation.cpp  dataset.cpp
driver/resources/: GenderPetTest.csv
driver/src/: main.cpp
gui/: CMakeLists.txt
gui/src/prototype/: Main.java
gui/src/prototype/controller/: Controller.java
gui/src/prototype/view/: MainView.fxml  RootLayout.fxml
